[gd_scene load_steps=17 format=3 uid="uid://rr4wxjopxfl0"]

[ext_resource type="Texture2D" uid="uid://i4wac8bsba75" path="res://assets/ships/saucer_2.png" id="1_6icuo"]
[ext_resource type="Script" path="res://enemies/saucer.gd" id="1_f2qsm"]
[ext_resource type="AudioStream" uid="uid://tetv1fwpj6n4" path="res://assets/sounds/misc/sci-fi-door.wav" id="3_w1u8y"]
[ext_resource type="PackedScene" uid="uid://bcmn4tkqvk0js" path="res://health_bar/health_bar.tscn" id="4_bb3d5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_g0s5e"]
radius = 36.1248

[sub_resource type="Animation" id="Animation_7abr0"]
resource_name = "spin"
length = 6.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Area2D/Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="Animation" id="Animation_x26sy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Area2D/Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Area2D/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sound:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Area2D/Sprite2D:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_3horc"]
resource_name = "shoot"
length = 2.6
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Area2D/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2, 2.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 5, 4, 3, 2, 1, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sound:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.2, 2.6),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [true],
"method": &"set_shooting"
}, {
"args": [],
"method": &"shoot"
}, {
"args": [false],
"method": &"set_shooting"
}]
}

[sub_resource type="Animation" id="Animation_41eef"]
resource_name = "death"
length = 1.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Area2D/Sprite2D:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.780392, 0, 0.611765, 1), Color(0.780392, 0, 0.611765, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 1.4),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [false],
"method": &"set_process"
}, {
"args": [],
"method": &"make_booms"
}, {
"args": [],
"method": &"die"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tq84y"]
_data = {
"RESET": SubResource("Animation_x26sy"),
"death": SubResource("Animation_41eef"),
"shoot": SubResource("Animation_3horc"),
"spin": SubResource("Animation_7abr0")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_e7j1u"]
animation = &"death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tv3un"]
animation = &"shoot"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_rlwd7"]
animation = &"spin"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ynwtb"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rkmg0"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_t2eah"]
states/End/position = Vector2(586, 100)
states/death/node = SubResource("AnimationNodeAnimation_e7j1u")
states/death/position = Vector2(387, 34)
states/shoot/node = SubResource("AnimationNodeAnimation_tv3un")
states/shoot/position = Vector2(469, 100)
states/spin/node = SubResource("AnimationNodeAnimation_rlwd7")
states/spin/position = Vector2(328, 100)
transitions = ["Start", "spin", SubResource("AnimationNodeStateMachineTransition_ynwtb"), "shoot", "spin", SubResource("AnimationNodeStateMachineTransition_rkmg0")]
graph_offset = Vector2(-223.451, -39)

[node name="Saucer" type="PathFollow2D"]
rotates = false
script = ExtResource("1_f2qsm")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 5

[node name="Sprite2D" type="Sprite2D" parent="Area2D"]
texture = ExtResource("1_6icuo")
offset = Vector2(0, 3)
hframes = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_g0s5e")

[node name="Booms" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="Booms"]
position = Vector2(-26, 0)

[node name="Marker2D2" type="Marker2D" parent="Booms"]
position = Vector2(26, 0)

[node name="Marker2D3" type="Marker2D" parent="Booms"]
position = Vector2(0, 24)

[node name="Marker2D4" type="Marker2D" parent="Booms"]
position = Vector2(0, -24)

[node name="Marker2D5" type="Marker2D" parent="Booms"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "spin"
libraries = {
"": SubResource("AnimationLibrary_tq84y")
}

[node name="Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_w1u8y")

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_t2eah")
anim_player = NodePath("../AnimationPlayer")
active = true

[node name="HealthBar" parent="." instance=ExtResource("4_bb3d5")]
offset_left = -30.0
offset_top = -40.0
offset_right = 30.0
offset_bottom = -37.0

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="died" from="HealthBar" to="." method="_on_health_bar_died"]
